--- a/.makefile/Makefile.header
+++ b/.makefile/Makefile.header
@@ -73,6 +73,10 @@ ifeq ($(MY_CXX),)
 #MY_CXX=clang++-4.0
 endif
 
+ifneq ($(MY_CXX),)
+CXX = $(MY_CXX)
+endif
+
 ###################################################
 # Common defines
 SIMTADYN_DEFINES=-DBACKWARD_HAS_DW=1 -DCHECK_OPENGL -DSIMTADYN_DATA_PATH=\"$(PROJECT_DATA_PATH)\"
