Fix outdated Makefile for the standalone forth
and add its compilation into CI scripts

--- a/src/forth/standalone/Makefile
+++ b/src/forth/standalone/Makefile
@@ -18,105 +18,99 @@
 ## along with GNU Emacs.  If not, see <http://www.gnu.org/licenses/>.
 ##=====================================================================
 
-.PHONY: clean build coverage with-code-coverage
+###################################################
+# Sharable informations between all Makefiles
+-include ../../../.makefile/Makefile.header
 
 ###################################################
-# Color
-CLR_DEFAULT := $(shell echo '\033[00m')
-CLR_RED     := $(shell echo '\033[31m')
-CLR_GREEN   := $(shell echo '\033[32m')
-CLR_YELLOW  := $(shell echo '\033[33m')
-CLR_BLUE    := $(shell echo '\033[34m')
-CLR_PURPLE  := $(shell echo '\033[35m')
-CLR_CYAN    := $(shell echo '\033[36m')
-print-comp = \
-	@echo "$(CLR_PURPLE)*** $1:$(CLR_DEFAULT) $(CLR_CYAN)$2$(CLR_DEFAULT) <= $(CLR_YELLOW)$3$(CLR_DEFAULT)"
-print-link= \
-	@echo "$(CLR_PURPLE)*** $1:$(CLR_DEFAULT) $(CLR_CYAN)$2$(CLR_DEFAULT) => $(CLR_YELLOW)$3$(CLR_DEFAULT) $4"
+# Executable name
+TARGET = SimForth
 
 ###################################################
-# Path where to store *.o files. Default: ./build/
-ifeq ($(BUILD),)
-BUILD = build
-endif
+# Path where to store the generated coverage docs
+DOC = ../doc/coverage
+# Path where to store lcov rapport
+RAPPORT = build/rapport.info
 
 ###################################################
-# Set include paths
-INCLUDES = -I. -I.. -I../../.. -I../../../Common -I../../../SimTaDyn -I../../../Common/SharedLibrary -I../../../../tools
+# Inform Makefile where to find header files
+INCLUDES = -I$(BUILD) -I. -I.. -I../../../src/common/utils	\
+-I../../../src/common/patterns -I../../../external/backward-cpp
 
 ###################################################
-# Path for Makefile to find *.o
-VPATH=.:$(BUILD):..:../../../Common:../../../SimTaDyn:../../../Common/SharedLibrary:../../../../tools
+# Inform Makefile where to find *.cpp and *.o files
+VPATH=$(BUILD):.:..:../../../src/common/utils:../../../src/common/patterns:../../../external/backward-cpp
 
 ###################################################
-# Set objects architecture specific
-OBJECTS_POCO       = Backward.o Logger.o SimTaDynLogger.o Exception.o SharedLibrary_UNIX.o SharedLibrary.o
-OBJECTS_FORTH      = ForthExceptions.o ForthStream.o ForthDictionary.o ForthPrimitives.o Forth.o
-OBJECTS_STANDALONE = TextColor.o
-OBJECTS            = $(OBJECTS_POCO) $(OBJECTS_FORTH) $(OBJECTS_STANDALONE) main.o
-TARGET             = SimForth
+# List of files to compile. Splited by directories
+OBJ_EXTERNAL   = backward.o
+OBJ_UTILS      = Exception.o ILogger.o Logger.o
+OBJ_FORTH      = ForthExceptions.o ForthStream.o ForthDictionary.o ForthPrimitives.o Forth.o
+OBJ_STANDALONE =
+OBJ            = $(OBJ_EXTERNAL) $(OBJ_UTILS) $(OBJ_FORTH) $(OBJ_STANDALONE) main.o
 
 ###################################################
-# Compil options
-CXX = g++
+# Compilation options. For knowing which libraries
+# is needed please read the doc/Install.md file.
 CXXFLAGS = -W -Wall -Wextra -O2 -g -std=c++11
 LDFLAGS = -ldl -ldw
-DEFINES =
+DEFINES = $(SIMTADYN_DEFINES)
 
 ###################################################
-# Set Libraries
+# Set Libraries compiled in the external/ directory.
+# For knowing which libraries is needed please read
+# the doc/Install.md file.
 LIBS =
 
 ###################################################
-# Files dependencies
-DEPFLAGS = -MT $@ -MMD -MP -MF $(BUILD)/$*.Td
-POSTCOMPILE = mv -f $(BUILD)/$*.Td $(BUILD)/$*.d
+# Set Libraries. For knowing which libraries
+# is needed please read the doc/Install.md file.
+LIBS +=
 
 ###################################################
-# Code coverage
-ifneq ($(filter with-code-coverage, $(MAKECMDGOALS)),)
-CXXFLAGS += --coverage
-LDFLAGS += --coverage
-endif
+# Code coverage. Uncomment if desired
+# CXXFLAGS += --coverage
+# LDFLAGS += --coverage
 
 ###################################################
-# Main entry
 all: $(TARGET)
 
-$(TARGET): $(OBJECTS)
-	@$(call print-link,"Linking","$(TARGET)","$(BUILD)/$@","")
-	@cd $(BUILD) && $(CXX) $(OBJECTS) -o $(TARGET) $(LIBS) $(LDFLAGS)
+###################################################
+# Link sources
+$(TARGET): $(OBJ)
+	@$(call print-to,"Linking","$(TARGET)","$(BUILD)/$@","")
+	@cd $(BUILD) && $(CXX) $(OBJ) -o $(TARGET) $(LIBS) $(LDFLAGS)
 
-%.o: %.cpp
-%.o: %.cpp $(BUILD)/%.d
-	@$(call print-comp,"Compiling C++","$(TARGET)","$<")
+###################################################
+# Compile sources
+%.o: %.cpp $(BUILD)/%.d Makefile ../../../.makefile/Makefile.header ../../../.makefile/Makefile.footer version.h
+	@$(call print-from,"Compiling C++","$(TARGET)","$<")
 	@$(CXX) $(DEPFLAGS) $(CXXFLAGS) $(DEFINES) $(INCLUDES) -c $(abspath $<) -o $(abspath $(BUILD)/$@)
 	@$(POSTCOMPILE)
 
 ###################################################
-# Code coverage
-with-code-coverage: all
-
-coverage-report: $(TARGET)
-	@mkdir -p coverage_report 2> /dev/null
-	@rm -fr coverage_report/* 2> /dev/null
-	@gcovr -r ../../. --html -o coverage_report/coverage.html --html-details
-	@firefox coverage_report/coverage.html
+# Generate the rapport of the code coverage
+.PHONY: coverage
+coverage: $(TARGET)
+	@$(call print-to,"Running","$(TARGET)","$(RAPPORT)","")
+	@./build/$(TARGET) || echo ""
+	@$(call print-to,"Documentation","$(RAPPORT)","$(DOC)","")
+	@lcov --quiet --directory .. -c -o $(RAPPORT)
+	@lcov --quiet --remove $(RAPPORT) '/usr*' 'external/*' 'tests/*' -o $(RAPPORT)
+	@genhtml --quiet -o $(DOC) -t "SimForth" $(RAPPORT)
 
 ###################################################
-# Clean Target
+.PHONY: clean
 clean:
-	@echo "*** Cleaning"
+	@$(call print-simple,"Cleaning","$(PWD)")
 	@rm -fr *~ ../*~ $(BUILD) coverage_report 2> /dev/null
 
 ###################################################
-# Create a temporary folder to store *.o
-$(DEPFILES): | $(BUILD)
-$(OBJECTS): | $(BUILD)
-$(BUILD):
-	@mkdir -p $(BUILD)
+# Generate a header file with the project version
+version.h: VERSION
+	@$(call print-from,"Version","$(TARGET)","VERSION","")
+	@../../../.makefile/version.sh VERSION $(BUILD)/version.h
 
-$(BUILD)/%.d: ;
-.PRECIOUS: $(BUILD)/%.d
-
--include $(patsubst %,$(BUILD)/%.d,$(basename $(OBJECTS)))
+###################################################
+# Sharable informations between all Makefiles
+-include ../../../.makefile/Makefile.footer
