--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ matrix:
 
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then docker pull ubuntu:17.04 ; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then docker run -e CXX="$CXX" -e DEPLOY="$DEPLOY_SIMTADYN" --name travis-ci -v $TRAVIS_BUILD_DIR:/SimTaDyn -td ubuntu:16.04 /bin/bash ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then docker run -e CXX="$CXX" -e TRAVIS=$TRAVIS -e TRAVIS_JOB_ID=$TRAVIS_JOB_ID --name travis-ci -v $TRAVIS_BUILD_DIR:/SimTaDyn -td ubuntu:16.04 /bin/bash ; fi
 
 install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then docker exec -ti travis-ci bash -c "cd SimTaDyn && ./.integration/travis-install-linux.sh" ; fi
